Actualizaciones para sprint 3