@@ -19,124 +19,69 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
+
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
+import java.time.LocalDate;
+import java.util.stream.Collectors;
+
 /**
- * @author Tgl. Jhoan Villa.
- * Email: jhoan.villa
- * @version Id: <b>gestor-de-proyectos</b> 30/08/2025, 10:30 a. m.
- **/
+ * Implementación del servicio de proyectos.
+ * - Mapea CrearProyectoDTO -> Proyecto -> ProyectoModel
+ * - Asigna fechaRegistro = LocalDate.now()
+ * - Estado inicial: "Por revisar"
+ */
 @Service
 @RequiredArgsConstructor
-@Slf4j
 public class ProyectoServiceImpl implements ProyectoService {
 
     private final ProyectoRepository proyectoRepository;
-    private final CompromisosRepository compromisosRepository;
-    private final FechaActualService fechaActual;
 
     @Override
-    public ProyectoModel crearProyecto(CrearProyectoDTO crearProyectoDTO) {
+    public ProyectoModel crearProyecto(CrearProyectoDTO dto) {
         Proyecto proyecto = new Proyecto();
-        proyecto.setId(generateId(null));
-        proyecto.setNombre(crearProyectoDTO.getNombre());
-        proyecto.setDescripcion(crearProyectoDTO.getDescripcion());
-        proyecto.setUserId(crearProyectoDTO.getUserId());
-        proyecto.setCategoria(crearProyectoDTO.getCategoria());
-        proyecto.setPresupuesto(crearProyectoDTO.getPresupuesto());
-        proyecto.setDirigidoa_a(crearProyectoDTO.getDirigidoa_a());
-        proyecto.setFechaCreacion(fechaActual.getCurrentDate());
-        proyecto.setFechaModificacion(fechaActual.getCurrentDate());
-        proyecto.setFechaFinalizacion(crearProyectoDTO.getFechaFinalizacion());
+        proyecto.setId(UUID.randomUUID().toString());
+        proyecto.setNombre(dto.getNombre());
+        proyecto.setDescripcion(dto.getDescripcion());
+        proyecto.setUserId(dto.getUserId());
+        proyecto.setCategoria(dto.getCategoria());
+        proyecto.setPresupuesto(dto.getPresupuesto());
+        proyecto.setDirigidoa_a(dto.getDirigidoa_a());
+        proyecto.setFechaCreacion(LocalDate.now());
+        proyecto.setFechaModificacion(LocalDate.now());
+        proyecto.setFechaFinalizacion(dto.getFechaFinalizacion());
+        proyecto.setFechaCompromiso(dto.getFechaCompromiso());
+        proyecto.setFechaPrimerAvance(dto.getFechaPrimerAvance());
+        proyecto.setFechaRegistro(LocalDate.now());
         proyecto.setEstado("Por revisar");
 
-        List<String> compromisosIds = new ArrayList<>();
-
-        if (crearProyectoDTO.getCompromisos() != null && !crearProyectoDTO.getCompromisos().isEmpty()) {
-            for (CrearCompromisoDTO compromisoDTO : crearProyectoDTO.getCompromisos()) {
-                Compromisos compromiso = new Compromisos();
-                compromiso.setId(generateId(null));
-                compromiso.setDescripcion(compromisoDTO.getDescripcion());
-                compromiso.setEstado(compromisoDTO.getEstado());
-                compromiso.setFechaEstimada(compromisoDTO.getFechaEstimada());
-                compromiso.setFechaReal(fechaActual.getCurrentDate());
-                Compromisos saved = compromisosRepository.save(compromiso);
-                compromisosIds.add(saved.getId());
-            }
-        }
-
-        proyecto.setCompromisosId(compromisosIds);
-
-        Proyecto savedProyecto = proyectoRepository.save(proyecto);
-        log.info("Proyecto creado con ID: {}", savedProyecto.getId());
-        return mapToModel(savedProyecto);
-    }
-
-    @Override
-    public List<ProyectoModel> listarProyectosPorUsuario(String userId) {
-        List<Proyecto> proyectos = proyectoRepository.findAllByUserId(userId);
-        return proyectos.stream().map(this::mapToModel).toList();
-    }
-
-    @Override
-    public ProyectoModel proyectoPorId(String proyectoId) {
-        Optional<Proyecto> proyectoOptional = proyectoRepository.findById(proyectoId);
-        Proyecto proyecto = proyectoOptional.orElseThrow(() ->
-                new RuntimeException("El proyecto con ID " + proyectoId + " no existe"));
-        return mapToModel(proyecto);
-    }
-
-    @Override
-    public Page<ProyectoModel> proyectosPaginados(int page, int size) {
-        PageRequest pageable = PageRequest.of(page, size);
-        Page<Proyecto> proyectosPage = proyectoRepository.findAll(pageable);
-        return proyectosPage.map(this::mapToModel);
-    }
-
-    @Override
-    public ProyectoModel actualizarProyecto(String id,  ActualizarProyectoDTO actualizarProyectoDTO) {
-        Proyecto proyecto = proyectoRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Proyecto no encontrado"));
-        proyecto.setNombre(actualizarProyectoDTO.getNombre());
-        proyecto.setCategoria(actualizarProyectoDTO.getCategoria());
-        proyecto.setFechaModificacion(fechaActual.getCurrentDate());
-        proyecto.setEstado(actualizarProyectoDTO.getEstado());
-
-        Proyecto updatedProyecto = proyectoRepository.save(proyecto);
-        return mapToModel(updatedProyecto);
+        Proyecto saved = proyectoRepository.save(proyecto);
+        return mapToModel(saved);
     }
 
     @Override
     public List<ProyectoModel> listarProyectos() {
         List<Proyecto> proyectos = proyectoRepository.findAll();
-        return proyectos.stream().map(this::mapToModel).toList();
+        return proyectos.stream().map(this::mapToModel).collect(Collectors.toList());
     }
 
     @Override
-    public ProyectoModel cambiarEstado(String id, CambioDeEstadoModel cambioDeEstadoModel) {
-        Proyecto proyecto = proyectoRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Proyecto no encontrado"));
+    public ProyectoModel proyectoPorId(String id) {
+        Optional<Proyecto> opt = proyectoRepository.findById(id);
+        Proyecto p = opt.orElseThrow(() -> new IllegalArgumentException("Proyecto no encontrado"));
+        return mapToModel(p);
+    }
 
-        proyecto.setEstado(cambioDeEstadoModel.getEstado());
-
-        ComentariosDTO comentariosDTO = cambioDeEstadoModel.getComentarios();
-        ComentariosModel comentario = new ComentariosModel();
-        comentario.setUser(comentariosDTO.getUser());
-        comentario.setFechaComentarios(fechaActual.getCurrentDate());
-        comentario.setComentario(comentariosDTO.getComentario());
-
-        if ("Aceptado".equalsIgnoreCase(cambioDeEstadoModel.getEstado())) {
-            comentario.setTipoComentario("Proyecto aceptado");
-        } else {
-            comentario.setTipoComentario("Proyecto rechazado");
-        }
-        proyecto.setComentarios(comentario);
-        proyecto.setFechaModificacion(fechaActual.getCurrentDate());
-        Proyecto updatedProyecto = proyectoRepository.save(proyecto);
-        return mapToModel(updatedProyecto);
+    @Override
+    public void cambiarEstado(String id, String nuevoEstado) {
+        Optional<Proyecto> opt = proyectoRepository.findById(id);
+        Proyecto p = opt.orElseThrow(() -> new IllegalArgumentException("Proyecto no encontrado"));
+        p.setEstado(nuevoEstado);
+        p.setFechaModificacion(LocalDate.now());
+        proyectoRepository.save(p);
     }
 
     private ProyectoModel mapToModel(Proyecto proyecto) {
@@ -144,21 +89,17 @@ public class ProyectoServiceImpl implements ProyectoService {
         model.setId(proyecto.getId());
         model.setNombre(proyecto.getNombre());
         model.setDescripcion(proyecto.getDescripcion());
-        model.setUserId(proyecto.getUserId());
-        model.setCategoria(proyecto.getCategoria());
         model.setPresupuesto(proyecto.getPresupuesto());
-        model.setDirigidoa_a(proyecto.getDirigidoa_a());
+        model.setCategoria(proyecto.getCategoria());
+        model.setUserId(proyecto.getUserId());
+        model.setCompromisosId(proyecto.getCompromisosId());
         model.setFechaCreacion(proyecto.getFechaCreacion());
         model.setFechaModificacion(proyecto.getFechaModificacion());
         model.setFechaFinalizacion(proyecto.getFechaFinalizacion());
+        model.setFechaCompromiso(proyecto.getFechaCompromiso());
+        model.setFechaPrimerAvance(proyecto.getFechaPrimerAvance());
+        model.setFechaRegistro(proyecto.getFechaRegistro());
         model.setEstado(proyecto.getEstado());
-        model.setComentarios(proyecto.getComentarios());
-        model.setCompromisosId(proyecto.getCompromisosId());
         return model;
     }
-
-    private String generateId(String id) {
-        return (id == null) ? UUID.randomUUID().toString() : id;
-    }
 }
-
